--- a/.gitignore
+++ b/.gitignore
@@ -17,11 +17,11 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 
-# Go workspace file
-go.work
-go.work.sum
+#intelliJ files
+.idea/
 
 # env file
 .env
+*.yaml
 
 *.pprof
